--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name">Name</string>
     <string name="read_file">This app needs access to your file storage so that it can read photos</string>
+    <string name="hintSearch">Поиск еды без мяса...</string>
 </resources>
